WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53771
[GTK] fast/events/pagehide-timeout.html fails
https://bugs.webkit.org/show_bug.cgi?id=53771
Summary
[GTK] fast/events/pagehide-timeout.html fails
Mihai Parparita
Reported
2011-02-04 08:48:38 PST
Failure log at
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r77615%20(10360)/fast/events/pagehide-timeout-pretty-diff.html
It looks as though the page cache is not enabled, even though the test is using WebKitUsesPageCachePreferenceKey.
Attachments
Patch
(8.13 KB, patch)
2011-02-04 11:36 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-02-04 09:00:59 PST
Pasting the text diff in case this bug outlives the results: --- /var/lib/buildbot/build/gtk-linux-32-release/build/layout-test-results/fast/events/pagehide-timeout-expected.txt 2011-02-04 01:22:07.000000000 -0800 +++ /var/lib/buildbot/build/gtk-linux-32-release/build/layout-test-results/fast/events/pagehide-timeout-actual.txt 2011-02-04 01:22:07.000000000 -0800 @@ -1,13 +1,278 @@ CONSOLE MESSAGE: line 19: Creating timeout in pagehide CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back -CONSOLE MESSAGE: line 32: Restored page from page cache. -CONSOLE MESSAGE: line 23: Timeout created in pagehide fired -Tests that JS execution is suspended after the pagehide event is fired, so that timers created within it will not fire while the document is in the page cache. - -On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". - - -PASS successfullyParsed is true - -TEST COMPLETE +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +CONSOLE MESSAGE: line 19: Creating timeout in pagehide +CONSOLE MESSAGE: line 5: Loaded pagehide-timeout-go-back.html, going back +FAIL: Timed out waiting for notifyDone to be called
Adam Barth
Comment 2
2011-02-04 09:53:18 PST
Was this caused by my patch? It seems unrelated.
Mihai Parparita
Comment 3
2011-02-04 10:11:04 PST
(In reply to
comment #2
)
> Was this caused by my patch? It seems unrelated.
No, the cause was my patch (
http://trac.webkit.org/changeset/77559
) which added the test.
Mihai Parparita
Comment 4
2011-02-04 10:14:40 PST
FWIW, a bunch of other pagehide/show events related tests are skipped for GTK (from the Skipped file): 3764 # New events failing; see
https://bugs.webkit.org/show_bug.cgi?id=28823
3765 fast/events/pageshow-pagehide-on-back-cached.html 3766 fast/events/pageshow-pagehide-on-back-uncached.html 3767 fast/events/pageshow-pagehide.html 4663 #
https://bugs.webkit.org/show_bug.cgi?id=50887
4664 fast/events/pageshow-pagehide-on-back-cached-with-frames.html
Martin Robinson
Comment 5
2011-02-04 11:28:31 PST
Mihai, pointed me in the right direction on this one. It seems the issue is that by default Mac uses the DocumentBrowser cache model and makes sure to reset it betwen tests. GTK+: a. Doesn't have that model. b. Isn't resetting the model at all between tests. I'll post a patch soon.
Martin Robinson
Comment 6
2011-02-04 11:36:51 PST
Created
attachment 81254
[details]
Patch
Gustavo Noronha (kov)
Comment 7
2011-02-04 13:09:20 PST
Comment on
attachment 81254
[details]
Patch The new API sounds fine to me, but it seems a tiny bit weird that a test would rely on this. Anyway, go go go! =D
Mihai Parparita
Comment 8
2011-02-04 13:16:22 PST
Comment on
attachment 81254
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81254&action=review
> Tools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:567 > + switch (cacheModel) {
You may want a default block with an assert, in case the mac port adds another enum value and tests start to use it.
Martin Robinson
Comment 9
2011-02-04 17:41:25 PST
Committed
r77710
: <
http://trac.webkit.org/changeset/77710
>
Martin Robinson
Comment 10
2011-02-04 17:42:54 PST
(In reply to
comment #8
)
> You may want a default block with an assert, in case the mac port adds another enum value and tests start to use it.
Thanks! Landed with this change.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug