2011-02-04  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] fast/events/pagehide-timeout.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53771

        * platform/gtk/Skipped: Unskip a test which is now passing.
2011-02-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] fast/events/pagehide-timeout.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53771

        Add the document browser cache model. This model is optimized for viewing
        a series of local files, while the document viewer is optimized for only
        viewing one local file. Improve the documentation on the mapping of these
        enum values to actual cache settings.

        * webkit/webkitglobals.cpp:
        (webkit_set_cache_model): Add support for the document browser cache model and
        improve comments in this section better explaining where the magic numbers come from.
        * webkit/webkitglobals.h: Added an enum value for the document browser cache model.
2011-02-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] fast/events/pagehide-timeout.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53771

        Add knowledge of the document browser cache model the DRT. When resetting
        WebKit settings to consistent values between tests, default to the document
        browser cache model.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues): Reset the cache model to the document browser
        cache model between tests.
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setCacheModel): An int value of 2 here corresponds to the
        document browser cache model.

Canonical link: https://commits.webkit.org/67778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77710 268f45cc-cd09-0410-ab3c-d52691b4dbfc