Source/WebKit/gtk/webkit/webkitglobals.cpp
@@ -117,12 +117,22 @@ void webkit_set_cache_model(WebKitCacheModel model)
     gdouble deadDecodedDataDeletionInterval;
     guint pageCacheCapacity;
 
+    // FIXME: The Mac port calculates these values based on the amount of physical memory that's
+    // installed on the system. Currently these values match the Mac port for users with more than
+    // 512 MB and less than 1024 MB of physical memory.
     switch (model) {
     case WEBKIT_CACHE_MODEL_DOCUMENT_VIEWER:
         pageCacheCapacity = 0;
-        cacheTotalCapacity = 0;
+        cacheTotalCapacity = 0; // FIXME: The Mac port actually sets this to larger than 0.
         cacheMinDeadCapacity = 0;
         cacheMaxDeadCapacity = 0;
+        deadDecodedDataDeletionInterval = 0;
+        break;
+    case WEBKIT_CACHE_MODEL_DOCUMENT_BROWSER:
+        pageCacheCapacity = 2;
+        cacheTotalCapacity = 16 * 1024 * 1024;
+        cacheMinDeadCapacity = cacheTotalCapacity / 8;
+        cacheMaxDeadCapacity = cacheTotalCapacity / 4;
         deadDecodedDataDeletionInterval = 0;
         break;
     case WEBKIT_CACHE_MODEL_WEB_BROWSER:
